--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "xeger-wildcat-cucumber",
   "displayName": "Cucumber",
   "description": "Cucumber for Visual Studio Code",
-  "version": "1.7.0",
-  "publisher": "CucumberOpen",
+  "version": "1.7.1",
+  "publisher": "xeger",
   "engines": {
-    "vscode": "^1.72.0"
+    "vscode": "^1.76.0"
   },
   "categories": [
     "Programming Languages",
